--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,60 +1,60 @@
-.headerContainer {
-  height: 5rem;
-}
+// .headerContainer {
+//   height: 5rem;
+// }
 
-.headerContent {
-  max-width: 1110px;
-  height: 5rem;
-  margin: 0 auto;
-  padding: 0 2rem;
+// .headerContent {
+//   max-width: 1110px;
+//   height: 5rem;
+//   margin: 0 auto;
+//   padding: 0 2rem;
 
-  display: flex;
-  align-items: center;
+//   display: flex;
+//   align-items: center;
 
-  nav {
-    margin-left: 5rem;
-    height: 5rem;
+//   nav {
+//     margin-left: 5rem;
+//     height: 5rem;
 
-    h2 {
-      display: inline-block;
-      position: relative;
-      padding: 0 0.5rem;
-      height: 5rem;
-      line-height: 5rem;
-    }
+//     h2 {
+//       display: inline-block;
+//       position: relative;
+//       padding: 0 0.5rem;
+//       height: 5rem;
+//       line-height: 5rem;
+//     }
 
-    a {
-      display: inline-block;
-      position: relative;
-      padding: 0 0.5rem;
-      height: 5rem;
-      line-height: 5rem;
-      color: var(--gray-300);
+//     a {
+//       display: inline-block;
+//       position: relative;
+//       padding: 0 0.5rem;
+//       height: 5rem;
+//       line-height: 5rem;
+//       color: var(--gray-300);
 
-      transition: color 0.2s;
+//       transition: color 0.2s;
 
-      & + a {
-        margin-left: 2rem;
-      }
+//       & + a {
+//         margin-left: 2rem;
+//       }
 
-      &:hover {
-        color: var(--white)
-      }
+//       &:hover {
+//         color: var(--white)
+//       }
 
-      // &:active::after {
-      //   content: '';
-      //   height: 3px;
-      //   border-radius: 3px 3px 0 0;
-      //   width: 100%;
-      //   position: absolute;
-      //   bottom: 1px;
-      //   left: 0;
-      //   background: var(--yellow-500);
-      // }
-    }
-  }
+//       // &:active::after {
+//       //   content: '';
+//       //   height: 3px;
+//       //   border-radius: 3px 3px 0 0;
+//       //   width: 100%;
+//       //   position: absolute;
+//       //   bottom: 1px;
+//       //   left: 0;
+//       //   background: var(--yellow-500);
+//       // }
+//     }
+//   }
 
-  button {
-    margin-left: auto;
-  }
-}
+//   button {
+//     margin-left: auto;
+//   }
+// }
